# cjlox

./: .clang-format  .clang-tidy  .cmake-format.json  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.rst  Tupfile  Tuprules.tup  ex.lox  keyword_table.c  keyword_table.h  lox.c  lox.h  meson.build  object.c  object.h  scanner.c  scanner.h  token.c  token_type.c  token_type.h  vcpkg.json
.github/workflows/: ci.yml
args/: meson.build
args/include/args/: args.h
auxil/sysexits/: CMakeLists.txt
auxil/sysexits/include/sysexits/: sysexits.h
cjlox/: meson.build
cjlox/source/: main.c  meson.build
include/lox/: ast_printer.h  expr_destructors.h  lox.h  object.h  parser.h  scanner.h  token.h
lox/: meson.build
lox/include/lox/: lox.h
lox/source/: lox.c  meson.build
modules/ansi_esc/include/ansi_esc/: ansi_esc.h
modules/cjlox/source/: main.c
modules/lox/include/lox/: ast_printer.h  lox.h  object.h  parser.h  scanner.h  token.h  token_type.h
modules/lox/source/: ast_printer.c  lox.c  object.c  parser.c  scanner.c  token.c  token_type.c
modules/lox_ast_example/source/: main.c
modules/lox_generate_ast/ast/: lox.ast
modules/lox_generate_ast/source/: main.c
modules/phyto_collections/include/phyto/collections/: callbacks.h  dynamic_array.h
modules/phyto_deque_test/source/: main.c
modules/phyto_hash/include/phyto/hash/: hash.h
modules/phyto_hash/source/: hash.c
modules/phyto_hash_test/include/phyto_hash_test/: pcre.h
modules/phyto_hash_test/source/: main.c
modules/phyto_io/include/phyto/io/: io.h
modules/phyto_io/source/: io.c
modules/phyto_span/include/phyto/span/: span.h
modules/phyto_string/include/phyto/string/: string.h
modules/phyto_string/source/: string.c
modules/phyto_string_test/include/phyto/string_test/: append_fill.h  append_view.h  capitalize.h  center.h  count.h  ends_with.h  expand_tabs.h  extend.h  own.h  starts_with.h
modules/phyto_string_test/source/: append_fill.c  append_view.c  capitalize.c  center.c  count.c  ends_with.c  expand_tabs.c  extend.c  main.c  own.c  starts_with.c
modules/phyto_string_view/include/phyto/string_view/: string_view.h
modules/phyto_string_view/source/: string_view.c
modules/phyto_strong_types/include/phyto/strong_types/: strong_types.h
modules/phyto_test/include/phyto/test/: test.h
modules/phyto_vec/include/phyto/vec/: vec.h
modules/phyto_vec/source/: vec.c
modules/phyto_vec_test/source/: main.c
modules/rxi_vec/include/rxi/vec/: vec.h
modules/rxi_vec/source/: vec.c
modules/rxi_vec_test/source/: main.c
modules/sysexits/include/sysexits/: sysexits.h
source/: ast_printer.c  expr_destructors.c  keyword_table.c  lox.c  object.c  parser.c  scanner.c  token.c  token_type.c
span/: meson.build
span/include/span/: span.h
src/: ast_printer.c  ast_printer.h  astgen.c  environment.c  environment.h  interpreter.c  interpreter.h  main.c  main.h  meta.h  object.c  object.h  parser.c  parser.h  println.c  println.h  scanner.c  scanner.h  token.c  token.h  token_type.c  token_type.h
src/cjlox/: main.c
src/lox/: lox.c  run.c
string/: meson.build
string/include/string/: string.h
string/source/: meson.build  string.c
tool/: Tupfile  lox.ast  main.c  meson.build
